# coinsDetection

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  model-final-003-7-2019-07-06T16_50_52.636267.json
include/: coinRecognize.h
src/: coinRecognize.cpp  main.cpp  networkTrainer.py  tester.py
